--- a/index.html
+++ b/index.html
@@ -8,6 +8,62 @@
 
 </head>
 <body>
-    
+    <!-- start header are HEAR -->
+    <header>
+        <div class="header-container">
+            <div class="header-details">
+                <h1 class="title-h1">
+                    Let's Help Those Who Are More In Need
+                </h1>
+                <p class="title-p">We help fellow nonprofits access the funding, tools, training, and support they need to serve their communities.</p>
+                <button class="title-btn">Donate Now</button>
+            </div>
+        </div>
+    </header>
+    <!-- donate today section -->
+    <section>
+        <div class="donate-container">
+            <div class="donate-details">
+                <h1>Donate Today</h1>
+                <p class="title-p">Global connects nonprofits, donors, and companies in nearly every country in the world.</p>
+            </div>
+            <div class="donate-price">
+                <div class="price">
+                    <h2>1000tk</h2>
+                </div>
+                <div class="price2">
+                    <h2>2000tk</h2>
+                </div>
+                <div class="price">
+                    <h2>3000tk</h2>
+                </div>
+                <div class="price">
+                    <h2>5000tk</h2>
+                </div>
+                <div class="price">
+                    <h2>7000tk</h2>
+                </div>
+            </div>
+            <div class="donate-amount">
+                <p class="title-p">Other Amount (Taka)</p>
+                <hr>
+                <button class="title-btn">Donate Now</button>
+            </div>
+        </div>
+    </section>
+    <!-- Donate plan section -->
+    <section>
+        <div class="donate-plan">
+            <div class="plan-details">
+
+
+            </div>
+            <div class="plan-card">
+                <div class="card">
+                    
+                </div>
+            </div>
+        </div>
+    </section>
 </body>
 </html>
