--- a/index.html
+++ b/index.html
@@ -55,15 +55,31 @@
     <section>
         <div class="donate-plan">
             <div class="plan-details">
-
-
+                <h1>Our Donate Plan</h1>
+                <p class="title-p">Global Donate is a nonprofit that supports other nonprofits by connecting them</p>
             </div>
             <div class="plan-card">
-                <div class="card">
-                    
+                <div class="card card1">
+                    <img src="./images/food.png" alt="">
+                    <h3>Food For a family</h3>
+                    <p>food by linking food service donors with surplus food to local hunger relief agencies</p>
+                </div>
+                <div class="card card2">
+                    <img src="./images/Frame-1.png" alt="">
+                    <h3> Education for a child</h3>
+                    <p>food by linking food service donors with surplus food to local hunger relief agencies</p>
+                </div>
+                <div class="card card3">
+                    <img src="./images/shelter.png" alt="">
+                    <h3>shelter for a family</h3>
+                    <p>food by linking food service donors with surplus food to local hunger relief agencies</p>
                 </div>
             </div>
         </div>
+    </section>
+    <!-- hope section are start -->
+    <section>
+        
     </section>
 </body>
 </html>
