--- a/index.html
+++ b/index.html
@@ -79,7 +79,16 @@
     </section>
     <!-- hope section are start -->
     <section>
-        
+        <div class="hope-container">
+            <div class="hope-img">
+                <img src="./images/donation9.jpg" alt="">
+            </div>
+            <div class="hope-details">
+                <h1>Bringing hope to every crisis</h1>
+                <p>Every person, family, and country affected by crisis deservs our attention and support. Our disaste response director introduces a new way for you to mak difference</p>
+                <button class="title-btn">LEARN MORE</button>
+            </div>
+        </div>
     </section>
 </body>
 </html>
