--- a/index.html
+++ b/index.html
@@ -90,5 +90,27 @@
             </div>
         </div>
     </section>
+    <!-- updates section  -->
+    <section>
+        <div class="updates">
+            <h1>Get My Updates</h1>
+            <p>Global donate makes it easy and safe for you to give to local projects anywhere in the world.</p>
+        </div>
+    </section>
+    <!-- and subscribe section -->
+    <section>
+        <div class="subscribe">
+            <div class="subscribe-details">
+                <div class="divs-button">
+                    <input class="input" type="text" placeholder="Email">
+                    <input class="subscribe-btn"   type="button" value="subscribe">
+                </div>
+            </div>
+        </div>
+    </section>
+    <!-- footer area  -->
+    <footer>
+        <p><span>©</span> Copyright 2000-2022 GlobalGiving</p>
+    </footer>
 </body>
 </html>
