--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
     </section>
     <!-- footer area  -->
     <footer>
-        <p><span class="at">©</span> Copyright 2000-2022 GlobalGiving</p>
+        <p><span class="at">©</span> Copyright 2000-2022 GlobaDonate</p>
     </footer>
 </body>
 </html>
